# airline-ticket-reservation-system

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  manage.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
airline_reservation/: asgi.py  settings.py  urls.py  wsgi.py
openspec/: config.yaml
reservations/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
reservations/management/commands/: seed_airline_data.py
reservations/migrations/: 0001_initial.py  0002_booking_currency_booking_price_city_country_and_more.py  0003_reservation_booking_reservation.py  0004_reservation_cabin_class.py
reservations/static/reservations/css/: style.css
reservations/static/reservations/js/: app.js
reservations/templates/reservations/: base.html  booking_confirmation.html  booking_history.html  home.html  login.html  register.html  search_results.html  seat_selection.html
reservations/templates/reservations/partials/: destination_select.html  flight_results.html
