[project]
name = "airlineticketreservation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6.1",
    "django-htmx>=1.27.0",
]

[dependency-groups]
dev = [
    "coverage>=7.15.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["airline_reservation", "reservations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "airline_reservation.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["reservations"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["reservations"]
omit = [
    "*/migrations/*",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true